Migrate to proper Black-Box testing with subprojects (#45)
Split tests into separate projects so that we can import into eclipse without duplicate module-info file issues.
Running unit tests in eclipse is still broken because it refuses to actually out the module path on the module path... but its better.